# rust-linebot-sample

./: .gitignore  README.md
app-adapter/: Cargo.toml
app-adapter/src/gateway/: send_message.rs
app-adapter/src/model/message/send_message/: request.rs  table.rs
app-application/: Cargo.toml
app-domain/: Cargo.toml
app-domain/src/model/: line_user.rs
app-domain/src/model/message/: send_message.rs
app-presentation/: Cargo.toml
app-presentation/src/context/: axum_helper.rs
app-presentation/src/model/: line_webhook.rs
docker/app/: Dockerfile  Dockerfile.local
docker/db/: Dockerfile
firestore-rs/src/: lib.rs  timestamp_utils.rs
