[package]
name = "adapter"
version = "0.1.0"
edition = "2021"

[lib]
name = "adapter"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.73"
derive-new = "0.7.0"
domain = { path = "../app-domain" }
firestore = { path = "../firestore-rs" }
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
thiserror = "1.0.49"
rust_decimal = "1.32.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "mysql", "any", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.1"
strum_macros = "0.26.4"
strum = { version = "0.26.3", features = ["derive"] }
futures = "0.3.28"
chrono = "0.4.38"
uuid = { version = "1.5.0", features = ["v4"] }
