[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[lib]
name = "domain"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.73"
chrono = "0.4.38"
derive-new = "0.7.0"
mockall = "0.13.0"
rust_decimal = "1.32.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.1"
uuid = { version = "1.5.0", features = ["v4"] }

[dev-dependencies]
fake = {version = "2.8.0", features = ['derive']}
