[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[lib]
name = "presentation"
path = "src/lib.rs"

[dependencies]
adapter = { path = "../app-adapter" }
axum = "0.7.6"
axum-server = "0.7.1"
application = { path = "../app-application" }
domain = { path = "../app-domain" }
tokio = { version = "1.39.3", features = ["full", "test-util"] }
tower = "0.5.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.73"
thiserror = "1.0.49"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.22.1"
http = "1.1.0"
anyhow = "1.0.89"
derive-new = "0.7.0"

[dev-dependencies]
axum-test = "15.7.3"
chrono = "0.4.38"
fake = { version = "2.8.0", features = ['derive'] }
mockall = "0.13.0"

[features]
database-interaction-test = []
